[gd_scene load_steps=3 format=3 uid="uid://cpp82dokdh4dd"]

[ext_resource type="Texture2D" uid="uid://dow2hl8em1xwx" path="res://assets/passwordask.png" id="1_04q8p"]
[ext_resource type="Script" uid="uid://rlcsltqskahn" path="res://scripts/passwordask.gd" id="1_o0q3b"]

[node name="passwordask" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o0q3b")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.4957162, -1.9999809)
scale = Vector2(1.0020931, 1.069307)
texture = ExtResource("1_04q8p")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.6, 0.6)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -439.0
offset_top = -208.0
offset_right = -120.0
offset_bottom = -151.0
theme_override_colors/font_color = Color(1, 0.039215688, 0.05490196, 1)
theme_override_font_sizes/font_size = 30
text = "Use strong password: "

[node name="KeyInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = -97.0
offset_top = -207.0
offset_right = 268.0
offset_bottom = -160.0

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 301.0
offset_top = -221.0
offset_right = 410.0
offset_bottom = -138.0
theme_override_colors/font_color = Color(0.10980392, 0.09803922, 0.015686275, 1)
theme_override_font_sizes/font_size = 20
text = "Submit"

[node name="MessageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = -250.0
offset_top = -113.0
offset_right = 192.0
offset_bottom = -45.0
theme_override_colors/font_color = Color(1, 0.047058824, 0.050980393, 1)
theme_override_font_sizes/font_size = 30

[connection signal="text_submitted" from="KeyInput" to="." method="_on_key_input_text_submitted"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
